--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+<head>
+    
+    <meta charset="UTF-8">
+    <meta name="theme-color" content="#FFFFFF" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <!-- 🔍 SEO Básico -->
+    <title>Ándale Socio - Muestra tu negocio y recibe pedidos por WhatsApp</title>
+    <meta name="description" content="Con Ándale Socio puedes mostrar tu negocio en línea, compartir tu catálogo y recibir pedidos fácilmente por WhatsApp." />
+    <meta name="keywords" content="ándale, socio, negocios, whatsapp, pedidos, catálogo, tienda online, emprendedores" />
+    <meta name="author" content="ARCANA CORP" />
+
+    <!-- 📱 App Meta -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Ándale Socio" />
+
+    <!-- 🌐 Open Graph (para Facebook, LinkedIn, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://socio.kuyaay.com/" />
+    <meta property="og:title" content="Ándale Socio - Tu negocio en línea" />
+    <meta property="og:description" content="Publica tu catálogo y recibe pedidos directo a tu WhatsApp. Fácil, rápido y gratis." />
+    <meta property="og:image" content="https://socio.kuyaay.com/og-image.png" />
+    <meta property="og:site_name" content="Ándale Socio" />
+    <meta property="og:locale" content="es_ES" />
+
+    <!-- 🐦 Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ándale Socio - Tu negocio en línea" />
+    <meta name="twitter:description" content="Publica tu catálogo y recibe pedidos directo a tu WhatsApp. Fácil, rápido y gratis." />
+    <meta name="twitter:image" content="https://socio.kuyaay.com/og-image.png" />
+    <meta name="twitter:site" content="@andalesocio" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
+</head>
+<body>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+</body>
 </html>
